# Sidon

./: .gitignore  README.md  pyproject.toml
config/: config.yaml  preprocess.yaml
config/data/: preprocessed.yaml  preprocessed_48k.yaml  webdataset_preprocess_24k.yaml  webdataset_preprocess_48k.yaml
config/model/: sidon_feature_predictor.yaml  sidon_vocoder_finetune.yaml  sidon_vocoder_pretrain.yaml
config/preprocess/: default.yaml
config/train/: default.yaml
scripts/: summarise_shard_durations.py
scripts/pbs/: preprocess_24k.sh  preprocess_48k.sh  train_vocoder.sh
src/sidon/: __init__.py  preprocess.py  train.py
src/sidon/data/: __init__.py  datamodule.py
src/sidon/data/preprocess/: __init__.py  degrations.py  functional_degrations.py  rir_utils.py  webdataset_datamodule.py
src/sidon/model/: __init__.py  losses.py
src/sidon/model/sidon/: __init__.py  lightning_module.py
